; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_include.c_test_config_include__variables_in_included_override_including.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_include.c_test_config_include__variables_in_included_override_including.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"top-level\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"[foo]\0Abar = 1\0A[include]\0Apath = included\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"included\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"[foo]\0Abar = 2\00", align 1
@cfg = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [8 x i8] c"foo.bar\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_include__variables_in_included_override_including() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %4 = call i32 @git_config_open_ondisk(i32* @cfg, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @cfg, align 4
  %7 = call i32 @git_config_get_int32(i32* %1, i32 %6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @cl_assert_equal_i(i32 %9, i32 2)
  %11 = call i32 @p_unlink(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @p_unlink(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32*, i8*) #1

declare dso_local i32 @git_config_get_int32(i32*, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
